# busybee

./: .gitignore  .tarballignore  LICENSE  Makefile.am  README  README.md  bench.h  busybee-bench-mta.cc  busybee-bench-st.cc  busybee-bench-sta.cc  busybee-internal.h  busybee.cc  busybee.pc.in  busybee.upack.in  busybee_c_test.c  busybee_constants.h  busybee_mapper.cc  busybee_mapper.h  busybee_mapper_c.cc  busybee_mapper_c.h  busybee_mta.cc  busybee_mta.h  busybee_mta_c.cc  busybee_mta_c.h  busybee_returncode.cc  busybee_returncode.h  busybee_single.cc  busybee_single.h  busybee_st.cc  busybee_st.h  busybee_st_windows.h  busybee_sta.cc  busybee_sta.h  busybee_utils.cc  busybee_utils.h  busybee_windows.cc  configure.ac  epoll_poller.cc
include/: busybee.h
test/: bouncing-client.cc  bouncing-common.h  bouncing-server.cc
